--- a/Nodes/Translations/Translations.yaml
+++ b/Nodes/Translations/Translations.yaml
@@ -9,8 +9,91 @@ Children:
   Value: 
    {
     "Type": 12,
-    "Dimensions": [1,2],
+    "Dimensions": [84,2],
     "Body": [
-     "","en-US"
+     "","en-US",
+     "InAlarmConfirmed","In Alarm - Confirmed",
+     "NormalUnacked","Normal - Unacked",
+     "HighState","High",
+     "ShelveDuration","Shelve Duration",
+     "FromEventTime","From Event Time:",
+     "OutOfAlarmTime","Out Of Alarm Time",
+     "Enable","Enable",
+     "LowLowState","LowLow",
+     "EventTime","Event Time",
+     "HighHighState","HighHigh",
+     "Suppress","Suppress",
+     "LowState","Low",
+     "ActiveState","Active (Digital)",
+     "Reset","Reset",
+     "ToEventTime","To Event Time:",
+     "InactiveState","Inactive",
+     "InAlarmAcked","In Alarm - Acked",
+     "Enabled","Enabled",
+     "ViewDetails","View Details",
+     "Unsuppressed","Unsuppressed",
+     "Unshelved","Unshelved",
+     "BrowseName","Name",
+     "InAlarmUnacked","In Alarm - Unacked",
+     "Message","Message",
+     "SuppressTime","Suppress Time",
+     "Active","Active",
+     "Confirm","Confirm",
+     "Status","Status",
+     "AlarmState","Alarm State",
+     "EventCategory","Event Category",
+     "InAlarm","In Alarm",
+     "InAlarmUnconfirmed","In Alarm - Unconfirmed",
+     "Class","Class",
+     "FilteredBy","Filtered by:",
+     "CurrentValue","Current Value",
+     "Disable","Disable",
+     "TimedShelve","Timed Shelve",
+     "Unsuppress","Unsuppress",
+     "Unshelve","Unshelve",
+     "OneShotShelve","One-Shot Shelve",
+     "Inhibit","Inhibit",
+     "Acknowledge","Acknowledge",
+     "Name","Name",
+     "SourceVariable","Source Variable",
+     "Severity","Severity",
+     "Priority","Priority",
+     "ClearAll","Clear All",
+     "Apply","Apply",
+     "Cancel","Cancel",
+     "PresetShelveDuration","Preset Shelve Duration",
+     "Shelve","Shelve",
+     "Count","Count",
+     "CustomTimeShelve","Custom Time Shelve",
+     "Group","Group",
+     "Quality","Quality",
+     "UnsuppressTime","Unsuppress Time",
+     "LimitValueExceeded","Limit Value Exceeded",
+     "AlarmDetails","Alarm details",
+     "Confirmed","Confirmed",
+     "SeverityFrom","Severity From:",
+     "SeverityTo","Severity To:",
+     "Max","Max",
+     "MaxShelveDuration","Max Shelve Duration",
+     "InAlarmTime","In Alarm Time",
+     "ShelveTime","Shelve Time",
+     "DisableTime","Disable Time",
+     "UnshelveTime","Unshelve Time",
+     "EnableTime","Enable Time",
+     "Tag","Tag",
+     "Good","Good",
+     "Uncertain","Uncertain",
+     "Bad","Bad",
+     "Low","Low",
+     "Medium","Medium",
+     "High","High",
+     "Urgent","Urgent",
+     "NormalAcked","Normal - Acked",
+     "InAlarmAckedConfirmed","In Alarm - Acked - Confirmed",
+     "NormalAckedConfirmed","Normal - Acked - Confirmed",
+     "Disabled","Disabled",
+     "TimedShelved","Timed Shelved",
+     "OneShotShelved","One-Shot Shelved",
+     "Suppressed","Suppressed"
     ]
    }
